crates/figue/tests/integration/snapshots/main__integration__subcommand_errors__subcommand_with_partial_input.snap
---
source: crates/figue/tests/integration/subcommand_errors.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: missing required argument
   ╭─[ <suggestion>:1:16 ]
   │
 1 │ init myproject <description>
   │                ──────┬──────  
   │                      ╰──────── Project description
───╯
Note: Run with --help for usage information.
